--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
+    "@react-native-community/datetimepicker": "4.0.0",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@ui-kitten/components": "^5.1.2",
     "expo": "~44.0.0",
+    "expo-dev-client": "~0.8.5",
     "expo-status-bar": "~1.2.0",
     "native-base": "^3.4.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-date-picker": "^4.2.1",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-maps": "0.29.4",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
