--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@firebase/firestore": "^3.4.9",
     "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-firebase/app": "^14.9.1",
+    "@react-native-firebase/database": "^14.9.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
@@ -19,11 +22,13 @@
     "expo": "~44.0.0",
     "expo-dev-client": "~0.8.5",
     "expo-status-bar": "~1.2.0",
+    "firebase": "^9.8.1",
     "native-base": "^3.4.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-date-picker": "^4.2.1",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.8.0",
